Add API support for multiple file/folder(s) copy, move & delete
